Adding additional .gitignore files to repo

--- a/GCAM-Model/.gitignore
+++ b/GCAM-Model/.gitignore
@@ -1,6 +1,2 @@
-./gcam-v5.4/exe/debug.xml
-./gcam-v5.4/output/database_basexdb_GCAM-USA
-./gcam-v5.4/output/database_basexdb_GCAM
-./gcam-v5.4/output/database_basexdb
-./gcam-v5.4/logs
-./gcam-v5.4/restart
+./gcam-v7.0
+./gcam-v8.2
