Additional file updates.

--- a/GLIMPSE-ModelInterface/config/LegendBundle.properties
+++ b/GLIMPSE-ModelInterface/config/LegendBundle.properties
@@ -39,7 +39,7 @@ cellulosic ethanol=-3394561,-11141291,0,0
 corn ethanol=-1316082,-171,0,0
 electricity=-13261,-11184641,0,0
 fuel production=-52429,-11141291,0,0
-biomass growth=-10027213,-43691,0,0
+*:biomass growth=-10027213,-43691,0,0
 transport-ALM=-3394561,-20561,0,0
 hydrogen=-65332,-11141121,0,0
 refined liquids=-4194304,-4194304,0,0
@@ -130,3 +130,20 @@ cellulosic ethanol CCS level 1=-3394561,-16728064,17,0
 cellulosic ethanol CCS level 2=-3394561,-4145152,16,0
 AFOLU=-6697984,-16728064,0,0
 CO=-6710887,-43691,0,0
+"5.2 CO2 emissions by aggregate sector":bldgs-commercial=-39424,-43691,0,0
+"5.2 CO2 emissions by aggregate sector":bldgs-residential=-13210,-11184641,0,0
+"5.2 CO2 emissions by aggregate sector":electricity=-205,-11184641,0,0
+"5.2 CO2 emissions by aggregate sector":fuel production=-52429,-11141291,0,0
+"5.2 CO2 emissions by aggregate sector":industry=-13369345,-11141291,0,0
+"5.2 CO2 emissions by aggregate sector":transport-ALM=-3394561,-20561,0,0
+"5.2 CO2 emissions by aggregate sector":transport-HDV=-13434727,-43521,0,0
+"5.2 CO2 emissions by aggregate sector":transport-LDV=-10092340,-11141121,0,0
+"5.2 CO2 emissions by aggregate sector":biomass growth=-10027213,-43691,0,0
+"5.2 CO2 emissions by aggregate sector":bldgs-commercial=-39424,-43691,0,0
+"5.2 CO2 emissions by aggregate sector":bldgs-residential=-13210,-11184641,0,0
+"5.2 CO2 emissions by aggregate sector":electricity=-205,-11184641,0,0
+"5.2 CO2 emissions by aggregate sector":fuel production=-52429,-11141291,0,0
+"5.2 CO2 emissions by aggregate sector":industry=-13369345,-11141291,0,0
+"5.2 CO2 emissions by aggregate sector":transport-ALM=-3394561,-20561,0,0
+"5.2 CO2 emissions by aggregate sector":transport-HDV=-13434727,-43521,0,0
+"5.2 CO2 emissions by aggregate sector":transport-LDV=-10092340,-11141121,0,0
