--- a/GLIMPSE-ModelInterface/config/LegendBundle.properties
+++ b/GLIMPSE-ModelInterface/config/LegendBundle.properties
@@ -147,3 +147,19 @@ CO=-6710887,-43691,0,0
 "5.2 CO2 emissions by aggregate sector":transport-ALM=-3394561,-20561,0,0
 "5.2 CO2 emissions by aggregate sector":transport-HDV=-13434727,-43521,0,0
 "5.2 CO2 emissions by aggregate sector":transport-LDV=-10092340,-11141121,0,0
+"5.2 CO2 emissions by aggregate sector":bldgs-commercial=-39424,-43691,0,0
+"5.2 CO2 emissions by aggregate sector":bldgs-residential=-16737997,-11184641,0,0
+"5.2 CO2 emissions by aggregate sector":electricity=-13261,-11184641,0,0
+"5.2 CO2 emissions by aggregate sector":fuel production=-52429,-11141291,0,0
+"5.2 CO2 emissions by aggregate sector":industry=-13369345,-11141291,0,0
+"5.2 CO2 emissions by aggregate sector":transport-ALM=-3394561,-20561,0,0
+"5.2 CO2 emissions by aggregate sector":transport-HDV=-13434727,-43521,0,0
+"5.2 CO2 emissions by aggregate sector":transport-LDV=-10092340,-11141121,0,0
+"5.2 CO2 emissions by aggregate sector":bldgs-commercial=-39424,-43691,0,0
+"5.2 CO2 emissions by aggregate sector":bldgs-residential=-16737997,-11184641,0,0
+"5.2 CO2 emissions by aggregate sector":electricity=-13261,-11184641,0,0
+"5.2 CO2 emissions by aggregate sector":fuel production=-52429,-11141291,0,0
+"5.2 CO2 emissions by aggregate sector":industry=-13369345,-11141291,0,0
+"5.2 CO2 emissions by aggregate sector":transport-ALM=-3394561,-20561,0,0
+"5.2 CO2 emissions by aggregate sector":transport-HDV=-13434727,-43521,0,0
+"5.2 CO2 emissions by aggregate sector":transport-LDV=-10092340,-11141121,0,0
