--- a/GLIMPSE-ModelInterface/model_interface.properties
+++ b/GLIMPSE-ModelInterface/model_interface.properties
@@ -1,26 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
 <comment>TODO: add comments</comment>
-<entry key="remove1975">true</entry>
-<entry key="enableSankey">true</entry>
-<entry key="queryFile">C:\Users\danlo\git\GLIMPSE-DL\GLIMPSE-ModelInterface\config\Main_queries_GLIMPSE-8.2.xml</entry>
-<entry key="paramPath">C:\Users\danlo\git\GLIMPSE-DL\GCAM-Model\gcam-v8.2\output\database-cop-v4</entry>
-<entry key="RecentFileTarget2">ModelInterface.ModelGUI2.DbViewer;Open DB</entry>
-<entry key="RecentFile2">C:\Users\danlo\git\GLIMPSE-DL\GCAM-Model\gcam-v8.2\output\database-global-v3;</entry>
-<entry key="RecentFileTarget3">ModelInterface.ModelGUI2.DbViewer;Open DB</entry>
-<entry key="RecentFile1">C:\Users\danlo\git\GLIMPSE-DL\GCAM-Model\gcam-v8.2\output\database-cop-v4;</entry>
-<entry key="RecentFileTarget1">ModelInterface.ModelGUI2.DbViewer;Open DB</entry>
+<entry key="lastWidth">1147</entry>
 <entry key="allYearList">2015;2021;2025;2030;2035;2040;2045;2050;2055;2060;2065;2070;2075;2080;2085;2090;2095;2100</entry>
-<entry key="RecentFile5">C:\Users\danlo\git\GLIMPSE-DL\GLIMPSE-ModelInterface\.\..\GCAM-Model\gcam-v8.2\output\database;</entry>
-<entry key="enableMapping">true</entry>
-<entry key="RecentFileTarget4">ModelInterface.ModelGUI2.DbViewer;Open DB</entry>
-<entry key="RecentFile4">C:\Users\danlo\git\GLIMPSE-DL\GCAM-Model\gcam-v8.2\output\database-global;</entry>
-<entry key="RecentFileTarget5">ModelInterface.ModelGUI2.DbViewer;Open DB</entry>
-<entry key="RecentFile3">C:\Users\danlo\git\GLIMPSE-DL\GCAM-Model\gcam-v8.2\output\database-global-v2;</entry>
-<entry key="isMaximized">false</entry>
-<entry key="lastWidth">1138</entry>
+<entry key="paramPath">.\..\GCAM-Model\gcam-v8.2\output\database</entry>
 <entry key="RecentFilesLength">5</entry>
-<entry key="lastDirectory">C:\Users\danlo\git\GLIMPSE-DL\GCAM-Model\gcam-v8.2\output</entry>
-<entry key="lastHeight">853</entry>
+<entry key="RecentFile3">C:\Users\danlo\git\GLIMPSE-DL\GLIMPSE-ModelInterface\..\..\GCAM-Model\gcam-v7.0\output\database;</entry>
+<entry key="lastHeight">1111</entry>
+<entry key="RecentFile2">C:\Users\danlo\git\GLIMPSE-DL\GCAM-Model\gcam-v8.2\output\database;</entry>
+<entry key="RecentFile1">C:\Users\danlo\git\GLIMPSE-DL\GLIMPSE-ModelInterface\.\..\GCAM-Model\gcam-v8.2\output\database;</entry>
+<entry key="RecentFileTarget3">ModelInterface.ModelGUI2.DbViewer;Open DB</entry>
+<entry key="remove1975">true</entry>
+<entry key="queryFile">.\config\Main_queries_GLIMPSE-8.2.xml</entry>
+<entry key="RecentFileTarget2">ModelInterface.ModelGUI2.DbViewer;Open DB</entry>
+<entry key="RecentFileTarget1">ModelInterface.ModelGUI2.DbViewer;Open DB</entry>
+<entry key="lastDirectory">.\..\GCAM-Model\gcam-v8.2\output</entry>
 </properties>
