Updated gcam-glimpse.exe for windows with additional reporting on no-create messaging; updated GWP in unit conversion file, minor improvements to Main_queries_GLIMPSE-8.2 file

--- a/GLIMPSE-ModelInterface/config/LegendBundle.properties
+++ b/GLIMPSE-ModelInterface/config/LegendBundle.properties
@@ -350,3 +350,13 @@ CO=-6710887,-43691,0,0
 "2.1 Electricity use by aggregate sector":transport-ALM=-3394561,-20561,0,0
 "2.1 Electricity use by aggregate sector":transport-HDV=-13434727,-43521,0,0
 "2.1 Electricity use by aggregate sector":transport-LDV=-10092340,-11141121,0,0
+"CO2 sequestration by sector":H2 central production=-43691,-43691,0,5
+"CO2 sequestration by sector":base load generation=-11184641,-11184641,0,5
+"CO2 sequestration by sector":coal to liquids=-11141291,-11141291,0,5
+"CO2 sequestration by sector":intermediate generation=-171,-171,0,5
+"CO2 sequestration by sector":other industrial feedstocks=-43521,-43521,0,5
+"CO2 sequestration by sector":peak generation=-11141121,-11141121,0,5
+"CO2 sequestration by sector":subpeak generation=-20561,-20561,0,5
+"CO2 sequestration by sector":biomass liquids=-8355712,-8355712,0,5
+"CO2 sequestration by sector":cement=-4194304,-4194304,0,5
+"CO2 sequestration by sector":ammonia=-16777024,-16777024,0,5
