Adding updated health impact factors with 2023$bln as damage units.

--- a/GLIMPSE-ModelInterface/config/LegendBundle.properties
+++ b/GLIMPSE-ModelInterface/config/LegendBundle.properties
@@ -360,3 +360,60 @@ CO=-6710887,-43691,0,0
 "CO2 sequestration by sector":biomass liquids=-8355712,-8355712,0,5
 "CO2 sequestration by sector":cement=-4194304,-4194304,0,5
 "CO2 sequestration by sector":ammonia=-16777024,-16777024,0,5
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":biomass growth=-10027213,-43691,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":bldgs-commercial=-816606,-43691,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":bldgs-residential=-13395712,-11184641,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":electricity=-13261,-11184641,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":fuel production=-52429,-11141291,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":industry=-13369345,-11141291,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":transport-ALM=-3394561,-20561,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":transport-HDV=-13434727,-43521,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":transport-LDV=-10092340,-11141121,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":ammonia=-16777024,-16777024,0,5
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":bldgs-commercial=-816606,-43691,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":bldgs-residential=-13395712,-11184641,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":electricity=-13261,-11184641,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":fuel production=-52429,-11141291,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":industry=-13369345,-11141291,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":transport-ALM=-3394561,-20561,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":transport-HDV=-13434727,-43521,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":transport-LDV=-10092340,-11141121,0,0
+"Ref-Health-v3-O3DAM
+CO2 Total minus GLIMPSE-8.2-Ref-Health
+CO2 Total":ammonia=-16777024,-16777024,0,5
