--- a/GLIMPSE-ModelInterface/config/LegendBundle.properties
+++ b/GLIMPSE-ModelInterface/config/LegendBundle.properties
@@ -417,3 +417,36 @@ CO2 Total":transport-LDV=-10092340,-11141121,0,0
 "Ref-Health-v3-O3DAM
 CO2 Total minus GLIMPSE-8.2-Ref-Health
 CO2 Total":ammonia=-16777024,-16777024,0,5
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":biomass growth=-10027213,-43691,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":bldgs-commercial=-816606,-43691,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":bldgs-residential=-13395712,-11184641,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":electricity=-13261,-11184641,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":fuel production=-52429,-11141291,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":industry=-13369345,-11141291,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-ALM=-3394561,-20561,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-HDV=-13434727,-43521,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-LDV=-10092340,-11141121,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":bldgs-commercial=-816606,-43691,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":bldgs-residential=-13395712,-11184641,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":electricity=-13261,-11184641,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":fuel production=-52429,-11141291,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":industry=-13369345,-11141291,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-ALM=-3394561,-20561,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-HDV=-13434727,-43521,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-LDV=-10092340,-11141121,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":bldgs-commercial=-816606,-43691,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":bldgs-residential=-13395712,-11184641,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":electricity=-13261,-11184641,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":fuel production=-52429,-11141291,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":industry=-13369345,-11141291,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-ALM=-3394561,-20561,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-HDV=-13434727,-43521,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-LDV=-10092340,-11141121,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":bldgs-commercial=-816606,-43691,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":bldgs-residential=-13395712,-11184641,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":electricity=-13261,-11184641,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":fuel production=-52429,-11141291,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":industry=-13369345,-11141291,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-ALM=-3394561,-20561,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-HDV=-13434727,-43521,0,0
+"Total NZ-AQCap minus Ref minus Total NZ minus Ref":transport-LDV=-10092340,-11141121,0,0
